--- a/LOkopedia/LOkopedia/masterpage.Master
+++ b/LOkopedia/LOkopedia/masterpage.Master
@@ -7,6 +7,7 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1” />
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -30,14 +31,82 @@
         a.nodecoration:hover {
             text-decoration: none;
         }
+
+        .logo{
+            text-decoration:none;
+            margin-right:3vw;
+        }
+
+        .loginBtn{
+            margin-left:7vw;
+        }
+
+        .registerBtn{
+
+        }
+
+        .logo:hover{
+            text-decoration: none;
+        }
+
+        .searchBox{
+            margin-top:0.5vh;
+            width:50vw;
+            height:2vw;
+        }
+
+        .cartBtn{
+            width:2vw;
+            height:3vh;
+            margin:1.2vh;
+            margin-right:2vw;
+        }
+
+        .myPhoto{
+           border-radius:50%;
+           margin:1vh;
+        }
+
+        @media screen (max-width: 1200px){
+            .buttonGroup{
+                background-color:black;
+            }
+
+            #navbars{
+                width:100vw;
+                background-color: red;
+                flex-flow:wrap;
+                height:auto;
+            }
+
+            .searchBox{
+                width: 25vw;
+            }
+
+            .loginBtn, .registerBtn{
+                width:100%;
+                padding:100%;
+            }
+
+            .cartBtn{
+                width:100%;
+                display:block;
+            }
+
+            .myPhoto{
+                width:100%;
+                display:block;
+            }
+        }
+
     </style> 
 </head>
 <body>
     <form id="form1" runat="server">
-<nav class="navbar navbar-expand-lg navbar-light border-bottom bg-success">
+<nav id="navbars" class="navbar navbar-expand-lg navbar-light border-bottom bg-success">
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <asp:LinkButton ID="logo" OnClick="logo_Click" CssClass="nodecoration mr-5" Font-Names="Bauhaus 93" ForeColor="White" Font-Bold="true" Font-Size="XX-Large" runat="server">LOkopedia</asp:LinkButton>
+      <asp:ImageButton ID="logos" OnClick="logo_Click" Width="155" Height="40" CssClass="mt-2 ml-2 mr-5 border-dark" ImageUrl="/Upload/Lokopedia.png" runat="server" />
                 <asp:DropDownList ID="categoryFilter" CssClass="btn ml-3 mt-1" Width="135" Height="40" runat="server">
                     <asp:ListItem Value="0" Text="All Category"></asp:ListItem>
                     <asp:ListItem Value="1" Text="Beverages"></asp:ListItem>
@@ -46,10 +115,10 @@
                     <asp:ListItem Value="4" Text="Beauty"></asp:ListItem>
                 </asp:DropDownList>
         <asp:Button ID="goBtn" OnClick="goBtn_Click" CssClass="btn btn-primary mt-1 mr-5" Height="40" Font-Bold="true" runat="server" Text="Go" />
-      <asp:TextBox ID="search" CssClass="nav-item nav-link ml-5 mt-2" Height="35" Width="1000" runat="server"></asp:TextBox>
-      <asp:ImageButton ID="find" OnClick="find_Click" Width="40" Height="35" CssClass="mt-2 ml-2 border-dark" ImageUrl="https://img.icons8.com/pastel-glyph/64/000000/search--v2.png" runat="server" />
-      <asp:ImageButton ID="myCart" OnClick="myCart_Click" Width="40" Height="35" CssClass="mt-2 ml-5" ImageUrl="https://image.flaticon.com/icons/png/512/126/126083.png" runat="server" />
-      <asp:Image ID="myPhotos" Width="40" Height="35" CssClass=" mt-2 ml-4 rounded-circle" runat="server"  />
+      <asp:TextBox ID="search" CssClass="searchBox" runat="server"></asp:TextBox>
+      <asp:ImageButton ID="find" OnClick="find_Click" Width="40" Height="35" CssClass="mt-2 ml-2 mr-5 border-dark" ImageUrl="https://img.icons8.com/pastel-glyph/64/000000/search--v2.png" runat="server" />
+      <asp:ImageButton ID="myCart" OnClick="myCart_Click" CssClass="cartBtn" ImageUrl="https://image.flaticon.com/icons/png/512/126/126083.png" runat="server" />
+      <asp:Image ID="myPhotos" Width="40" Height="35" CssClass="myPhoto" runat="server"  />
       <%if (getID())
           {%>
         <div class="dropdown h-50">
@@ -65,8 +134,10 @@
     </div>
     <% }%>
 </div>
-        <asp:Button ID="login" OnClick="login_Click" CssClass=" font-weight-bold btn ml-5 mt-2" Font-Bold="true" Width="90" Height="35" BorderColor="Green" BorderWidth="3" BackColor="White" ForeColor="ForestGreen" Font-Size="10" runat="server" Text="Login" />
-      <asp:Button ID="register" OnClick="register_Click" CssClass="font-weight-bold btn ml-2 mt-2" Font-Bold="true" Width="90" Height="35" BorderColor="White" BorderWidth="3" BackColor="ForestGreen" ForeColor="White" Font-Size="10" runat="server" Text="Register" />
+        <div class="buttonGroup">
+            <asp:Button ID="login" OnClick="login_Click" CssClass="loginBtn" Font-Bold="true" Width="90" Height="35" BorderColor="Green" BorderWidth="3" BackColor="White" ForeColor="ForestGreen" Font-Size="10" runat="server" Text="Login" />
+            <asp:Button ID="register" OnClick="register_Click" CssClass="registerBtn" Font-Bold="true" Width="90" Height="35" BorderColor="White" BorderWidth="3" BackColor="ForestGreen" ForeColor="White" Font-Size="10" runat="server" Text="Register" />
+        </div>
     </div>
   </div>
 </nav>
